2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #438613

	* calendar.error.xml: New message "prompt-read-only-cal-editor".
	* gui/dialogs/comp-editor.c: (prompt_and_save_changes),
	(menu_file_save_cb): Use different read-only message when checking
	from contact editor and from calendar UI.

2008-03-13  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #512543

	* gui/e-day-view.c:
	* gui/e-week-view-event-item.c:
	* gui/e-calendar-view.c:
	* gui/e-calendar-view.h:
	* gui/e-week-view-main-item.c:
	* gui/e-day-view-time-item.c:
	* gui/e-day-view-top-item.c:
	* gui/e-day-view-main-item.c:
	Get rid of ENABLE_CAIRO define.

2008-03-11  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #513951

	* gui/cal-search-bar.c (cal_search_bar_construct):
	* gui/migration.c (create_calendar_sources), (create_task_sources),
	(migrate_calendars), (migrate_tasks), (create_memo_sources):
	* gui/e-memos.c (e_memos_setup_view_menus):
	* gui/tasks-component.c (ensure_sources):
	* gui/gnome-cal.c (gnome_calendar_setup_view_menus):
	* gui/calendar-component.c (ensure_sources):
	* gui/memos-component.c (ensure_sources):
	Adapt to new meaning of xxx_component_peek_base_directory().

	* gui/tasks-component.c (tasks_component_init):
	* gui/calendar-component.c (calendar_component_init):
	* gui/memos-component.c (memos_component_init):
	Use e_get_user_data_dir() instead of constructing the full path.

	* gui/migration.c (add_gw_esource):
	Emit warnings when saving to GConf fails.

2008-02-25  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #516498
	* gui/comp-util.c: (cal_comp_is_on_server):
	* gui/e-calendar-view.c: (e_calendar_view_cut_clipboard),
	(delete_event), (e_calendar_view_delete_selected_occurrence):
	* gui/e-day-view.c: (process_component):
	* gui/e-week-view.c: (process_component): Free memory returned 
	by e_cal_component_get_recurid_as_string.						  	

2008-02-24  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes#516408